updated icon python

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
               <!-- PYTHON SECTION NEEDS UPDATE-->
               <div class="col-sm-4 service-item scrollimation fade-left">
-                <div class="service-icon"><i class="fa fa-mobile"></i></div>
+                <div class="service-icon"><i class="fab fa-js"></i></div>
 
                 <h3>Python</h3>
 
