--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <link rel="stylesheet" href="assets/css/flexslider.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/styles-1.css" />
+    <link rel="stylesheet" href="assets/css/all.css" />
+    <link rel="stylesheet" href="assets/css/brands.css" />
+    <link rel="stylesheet" href="assets/css/regular.css" />
+    <link rel="stylesheet" href="assets/css/solid.css" />
+    <link rel="stylesheet" href="assets/css/svg-with-js.css" />
 
     <!-- ==============================================
 		Fonts
