--- a/slider-project.html
+++ b/slider-project.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
   <body>
-    <h1 class="project-title">Project<span>2015</span></h1>
-    <p class="project-subtitle">Branding / Web</p>
+    <h1 class="project-title">Live Happy Travels<span></span></h1>
+    <p class="project-subtitle">Blog and Booking site</p>
 
     <div class="project-media">
       <div class="project-slider flexslider">
@@ -22,7 +22,7 @@
             />
           </li>
           <li>
-            <img
+            <!-- <img
               class="img-responsive img-center"
               src="/assets/images/projects/slide-2-4.jpg"
               alt=""
@@ -34,6 +34,7 @@
               src="/assets/images/projects/slide-2-2.jpg"
               alt=""
             />
+          </li> -->
           </li>
         </ul>
       </div>
@@ -61,7 +62,7 @@
     </p>
 
     <p class="text-center margin-top">
-      <a class="btn btn-dc btn-main-color" href="livehappytravels.com"
+      <a class="btn btn-dc btn-main-color" href="www.livehappytravels.com"
         >Visit Website</a
       >
     </p>
