--- a/index.html
+++ b/index.html
@@ -943,21 +943,20 @@
               </p>
 
               <p>
-                John Doe<br />
-                W325 State Road 123<br />
-                Mondovi, WI(Wisconsin) 98746-54321<br />
-                (123) 456 - 7890 <br />
-              </p>
+                Stev Medrano<br />
+                USA<br /> 
+                (346) 372 - 0390 <br />
+              </p> 
 
               <div class="social-links">
-                <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-fw fa-facebook-square"></i></a>
-                <a href="#"><i class="fa fa-fw fa-linkedin-square"></i></a>
+                <!-- <a href="#"><i class="fa fa-fw fa-twitter"></i></a> -->
+                <a href="https://github.com/sMedrano101"><i class="fa fa-github"></i></a> 
+                <a href="https://www.linkedin.com/in/steve-medrano/"><i class="fa fa-fw fa-linkedin-square"></i></a>
               </div>
 
               <p>
-                <a class="mail-styled" href="mailto:mail@example.com"
-                  >contact@johndoe.com</a
+                <a class="mail-styled" href="steve.medrano101@yahoo.com"
+                  >steve.medrano101@yahoo.com</a
                 >
               </p>
             </div>
@@ -1067,12 +1066,12 @@
             </div>
 
             <div class="col-sm-2 text-right social-links">
-              <a href="#" data-toggle="tooltip" title="Follow me on Twitter"
+              <!-- <a href="#" data-toggle="tooltip" title="Follow me on Twitter"
                 ><i class="fa fa-fw fa-twitter"></i
               ></a>
               <a href="#" data-toggle="tooltip" title="Follow me on Facebook"
                 ><i class="fa fa-fw fa-facebook"></i
-              ></a>
+              ></a> -->
               <a href="#" data-toggle="tooltip" title="Follow me on LinkedIn"
                 ><i class="fa fa-fw fa-linkedin"></i
               ></a>
