--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			=============================================== -->
       <section id="about" class="big-padding">
         <div class="container">
-          <h1 style="color: #00cccb;" class="section-title">
+          <h1 style="color: seagreen;" class="section-title">
             My Profile<span class="main-color"></span>
           </h1>
 
@@ -223,7 +223,7 @@
 			=============================================== -->
       <section id="services" class="big-padding">
         <div class="container">
-          <h1 font-weight: bold; style="color: #00cccb;" class="section-title">
+          <h1 font-weight: bold; style="color: seagreen;" class="section-title">
             My Skills<span class="main-color"></span>
           </h1>
 
@@ -336,7 +336,7 @@
 
       <section class="big-padding gray-bg">
         <div class="container">
-          <h1 font-weight: bold; style="color: #00cccb;" class="section-title">
+          <h1 font-weight: bold; style="color: seagreen;" class="section-title">
             Latest Projects<span class="main-color"></span>
           </h1>
 
@@ -748,7 +748,7 @@
                 data-max-tweets="5"
               ></div>
 
-              <p>
+              <!-- <p>
                 <a
                   href="https://twitter.com/qthemes"
                   data-toggle="tooltip"
@@ -757,7 +757,7 @@
                   target="_blank"
                   >@johndoe</a
                 >
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -932,7 +932,7 @@
       <section id="contact" class="big-padding light-typo color-overlay">
         <div class="container">
           <h1 class="section-title">
-            Contact Me<span class="main-color">6</span>
+            Contact Me<span class="main-color"></span>
           </h1>
 
           <div class="row">
