changes colors front

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <h2 class="scrollimation fade-left">Steve</h2>
               <h3 class="scrollimation fade-left">Fullstack Developer</h3>
 
-              <p class="margin-top scrollimation fade-right">
+              <p style="color:white" class="margin-top scrollimation fade-right">
                 I am Steve Medrano, I'm a Full Stack Developer from Houston, TX.
                 I have studied in Digital Crafts; as a Full Stack Developer,
                 also have my Bachelors in Tourism from the University of
@@ -204,7 +204,7 @@
                 visual.
               </p>
 
-              <p class="lead margin-top scrollimation fade-left">
+              <p style="color: seagreen"  class="lead margin-top scrollimation fade-left">
                 Developing is not just a career for me, it's a passion.
               </p>
               <p class="scrollimation fade-left">
