made changes to the front end

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
           </div>
 
           <p class="lead text-center">
-            Like what you see? Contact me to discuss about your project!
+            Like what you see? Contact me to discuss your next project!
           </p>
           <p class="text-center">
             <a class="btn btn-dc btn-main-color scrollto" href="#contact"
