--- a/slider-project.html
+++ b/slider-project.html
@@ -42,23 +42,8 @@
 
     <h2>About Project</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus,
-      blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate
-      sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat
-      nibh, ut porttitor nisl dapibus eu.
-    </p>
-    <p>
-      Phasellus porta eros vel lacus euismod consequat. Phasellus eleifend, nibh
-      non feugiat hendrerit, lacus enim adipiscing eros, a pharetra erat neque
-      eget est. Quisque vitae aliquet urna. Integer suscipit lectus eu enim
-      porttitor fringilla. Ut blandit, urna in auctor euismod, arcu eros
-      pharetra metus, a porta purus libero a nibh.
-    </p>
-    <p>
-      Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula
-      nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada
-      justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi
-      tincidunt rhoncus urna eget placerat.
+      I developed Live Happy Travels in 2018. The website assist users to
+      purchase a flight and hotel at a reasonable price.
     </p>
 
     <p class="text-center margin-top">
