--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
               </p> -->
 
               <p>
-                <a class="btn btn-dc btn-small btn-main-color" href="#link"
-                  >Visit Website</a
+                <a class="btn btn-dc btn-small btn-main-color" href="https://www.linkedin.com/in/steve-medrano/"
+                  >Visit my Linkedin</a
                 >
               </p>
             </div>
