--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             ><span class="icon-bar"></span>
           </button>
 
-          <!-- ======= LOGO ========-->
-          <a class="navbar-brand scrollto" href="#home"
+          <!-- ======= LOGO CORNER LEFT TOP========--> 
+          <!-- <a class="navbar-brand scrollto" href="#home"
             ><img src="assets/images/logo.png" alt=""
           /></a>
-        </div>
+        </div> -->
 
         <div id="site-nav" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -432,15 +432,15 @@
             </div>
             <div class="col-sm-6 col-md-3 text-center">
               <span class="chart plus-symbol" data-percent="80"
-                ><span class="percent">99</span></span
-              >
-              <h2 class="text-center">Goal Orientation</h2>
-            </div>
-            <div class="col-sm-6 col-md-3 text-center">
-              <span class="chart equal-symbol" data-percent="95"
                 ><span class="percent">93</span></span
               >
               <h2 class="text-center">Support</h2>
+            </div>
+            <div class="col-sm-6 col-md-3 text-center">
+              <span class="chart equal-symbol" data-percent="95"
+                ><span class="percent">99</span></span
+              >
+              <h2 class="text-center">Goal Orientation</h2>
             </div>
             <div class="col-sm-6 col-md-3 text-center">
               <span class="chart" data-percent="90"
@@ -1045,13 +1045,13 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-2">
-              <a class="logo-link scrollto" href="#home">
+              <!-- <a class="logo-link scrollto" href="#home">
                 <img
                   class="img-responsive"
                   src="assets/images/logo-bw.png"
                   alt=""
                 />
-              </a>
+              </a> -->
             </div>
 
             <div class="col-sm-8">
