make changes front

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
           </button>
 
           <!-- ======= LOGO CORNER LEFT TOP========--> 
-          <!-- <a class="navbar-brand scrollto" href="#home"
+          <a class="navbar-brand scrollto" href="#home"
             ><img src="assets/images/logo.png" alt=""
           /></a>
-        </div> -->
+        </div>
 
         <div id="site-nav" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
