--- a/index.html
+++ b/index.html
@@ -1045,13 +1045,13 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-2">
-              <!-- <a class="logo-link scrollto" href="#home">
+              <a class="logo-link scrollto" href="#home">
                 <img
                   class="img-responsive"
                   src="assets/images/logo-bw.png"
                   alt=""
                 />
-              </a> -->
+              </a>
             </div>
 
             <div class="col-sm-8">
