added livehappy location

--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
 			SKILLS
 			=============================================== -->
       <section id="skills" class="small-padding dark-bg">
-        <div class="container">
-          <div class="row skills">
+        <!--  <div class="container">
+         <div class="row skills">
             <div class="col-sm-6 col-md-3 text-center">
               <span class="chart plus-symbol" data-percent="90"
                 ><span class="percent">93</span></span
@@ -448,9 +448,9 @@
               >
               <h2 class="text-center main-color">High Score</h2>
             </div>
-          </div>
-          <!--End row -->
-        </div>
+          </div> -->
+          <!--End row 
+        </div> -->
       </section>
 
       <!-- ==============================================
@@ -943,7 +943,7 @@
               </p>
 
               <p>
-                Stev Medrano<br />
+                Steve Medrano<br />
                 USA<br /> 
                 (346) 372 - 0390 <br />
               </p> 
