--- a/slider-project.html
+++ b/slider-project.html
@@ -42,12 +42,14 @@
 
     <h2>About Project</h2>
     <p>
-      I developed Live Happy Travels in 2018. The website assist users to
-      purchase a flight and hotel at a reasonable price.
+      Designed Live Happy blog that enables users to search and book flights
+      Responsible for updating plug-ins, security, affiliations, and user
+      experience. built with Wordpress, attached SEO, keywords, and
+      affiliations.
     </p>
 
     <p class="text-center margin-top">
-      <a class="btn btn-dc btn-main-color" href="www.livehappytravels.com"
+      <a class="btn btn-dc btn-main-color" href="https://livehappytravels.com/"
         >Visit Website</a
       >
     </p>
