--- a/index.html
+++ b/index.html
@@ -475,16 +475,16 @@
               >
                 All Items<span class="project-count"></span>
               </button>
-              <button data-filter=".web" type="button" class="btn btn-default">
+              <!-- <button data-filter=".web" type="button" class="btn btn-default">
                 Live Happy Travels<span class="project-count"></span>
-              </button>
-              <button
+              </button> -->
+              <!-- <button
                 data-filter=".print"
                 type="button"
                 class="btn btn-default"
               >
                 HTOWN APP<span class="project-count"></span>
-              </button>
+              </button> -->
               <!-- <button
                 data-filter=".video"
                 type="button"
@@ -497,6 +497,13 @@
         </div>
 
         <div class="container scrollimation fade-up">
+          <div class="iframe-container">
+          <iframe src="https://www.youtube.com/embed/LsYlobqq9G4?vq=hd1080&autoplay=1&rel=0" width="560" height="315" frameborder="0"></iframe>
+          </div>
+          <div class="iframe-container">
+          <iframe src="https://www.youtube.com/embed/ahOQPUjed7M?autoplay=1&rel=0" width="560" height="315" frameborder="0"></iframe>
+          </div>
+
           <div id="projects-container" class="row">
             <!-- ==============================================
 						SINGLE PROJECT ITEM
@@ -518,7 +525,7 @@
                 <p>Book your next flight</p>
                 <!--Project Subtitle -->
               </div>
-            </a>
+                </a>
 
             <a
               class="project-item col-sm-6 col-md-4 col-lg-3 web"
@@ -537,6 +544,7 @@
                 <!--Project Subtitle -->
               </div>
             </a>
+            <!---MADE CHANGES ABOVEEEEE-->
 
             <!-- <a
               class="project-item col-sm-6 col-md-4 col-lg-3 web"
@@ -596,6 +604,8 @@
               class="project-item col-sm-6 col-md-4 col-lg-3 print"
               href="#?images-project.html"
             >
+
+            
               <!-- <img
                 class="img-responsive project-image"
                 src="assets/images/projects/thumb-7.jpg"
