made changes to size iconify

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
               <nav>
                 <ul class="footer-nav">
                   <li><a class="scrollto" href="#home">Home</a></li>
-                  <li><a class="scrollto" href="#services">Services</a></li>
+                  <!-- <li><a class="scrollto" href="#myskills">Skills</a></li> -->
                   <li><a class="scrollto" href="#portfolio">Portfolio</a></li>
                   <li><a class="scrollto" href="#contact">Contact</a></li>
                 </ul>
