changes made to contact images

--- a/index.html
+++ b/index.html
@@ -413,42 +413,72 @@
           </div>
         </div>
       </div>
-
       <div class="container scrollimation fade-up">
+        <h1 style="text-align: center;">BREW APP</h1>
+        <p style="text-align: center; color: whitesmoke;">Brew App offers the users the ability to find the nearest
+          breweries. Created with vanilla javascript, while using google maps. Responsible for user experience through
+          rendering
+          google maps. Requested user locations and targeted breweries
+        </p>
+        <!-- <div class="container scrollimation fade-up"> -->
         <div class="iframe-container">
           <iframe src="https://www.youtube.com/embed/LsYlobqq9G4?vq=hd1080&autoplay=1&rel=0" width="560" height="315"
             frameborder="0"></iframe>
         </div>
+        <h1 style="text-align: center; padding-top: 28px;">Live Happy Travels</h1>
+        <p style="text-align: center; color: whitesmoke; "> Designed a blog that enables users to
+          search and book
+          flights. Responsible for
+          updating plug-ins, security, affiliations, and user experience.
+          It was built with Wordpress, attached SEO, keywords, and affiliations.
+
+
+        </p>
         <div class="iframe-container">
-          <iframe src="https://www.youtube.com/embed/ahOQPUjed7M?autoplay=1&rel=0" width="560" height="315"
+          <iframe src="https://www.youtube.com/embed/ahOQPUjed7M?version=3&autoplay=1&rel=1" width="560" height="315"
             frameborder="0"></iframe>
         </div>
+        <h1 style="text-align: center; padding-top: 28px;">Spoti Bae</h1>
+        <p style="text-align: center; color: whitesmoke; "> Simple and intuitive mobile app, that allows user's to
+          listen to their music playlist from Spotify.
+          You're able to register and login through our portal. You're also able to login through your Spotify and
+          listen to over 20 categories of music. Build with React, Postgres, Node.js.
+
+
+        </p>
+        <div class="iframe-container">
+          <iframe src="https://www.youtube.com/embed/tRyXz4-ESF8?autoplay=1&loop=1" width="560" height="315"
+            frameborder="0"></iframe>
+        </div>
+
+
+
 
         <div id="projects-container" class="row">
           <!-- ==============================================
 						SINGLE PROJECT ITEM
 						=============================================== -->
 
-          <a class="project-item thisONe col-sm-6 col-md-4 col-lg-3 web" href="#?slider-project.html">
-            <img class="img-responsive project-image" src="assets/images/projects/thumb-1.jpg" alt="" />
+          <!-- <a class="project-item thisONe col-sm-6 col-md-4 col-lg-3 web" href="#?slider-project.html">
+            <img class="img-responsive project-image" src="assets/images/projects/thumb-1.jpg" alt="" /> -->
 
-            <div class="hover-title">
-              <h2 class="project-title">Live Happy Travels</h2>
-              <!--Project Title -->
-              <p>Book your next flight</p>
-              <!--Project Subtitle -->
-            </div>
+          <div class="hover-title">
+            <h2 class="project-title">Live Happy Travels</h2>
+            <!--Project Title -->
+            <p>Book your next flight</p>
+            <!--Project Subtitle -->
+          </div>
           </a>
 
-          <a class="project-item col-sm-6 col-md-4 col-lg-3 web" href="#?youtube-project.html">
-            <img class="img-responsive project-image" src="assets/images/projects/thumb-2.jpg" alt="" />
+          <!-- <a class="project-item col-sm-6 col-md-4 col-lg-3 web" href="#?youtube-project.html">
+            <img class="img-responsive project-image" src="assets/images/projects/thumb-2.jpg" alt="" /> -->
 
-            <div class="hover-title">
-              <h2 class="project-title">HoustonApp</h2>
-              <!--Project Title -->
-              <p>Rate Your Neighborhood</p>
-              <!--Project Subtitle -->
-            </div>
+          <div class="hover-title">
+            <h2 class="project-title">HoustonApp</h2>
+            <!--Project Title -->
+            <p>Rate Your Neighborhood</p>
+            <!--Project Subtitle -->
+          </div>
           </a>
           <!---MADE CHANGES ABOVEEEEE-->
 
@@ -487,16 +517,16 @@
           <!--Project Subtitle -->
           <!-- </div> -->
           </a>
-
+          <!-- 
           <a class="project-item col-sm-6 col-md-4 col-lg-3 print" href="#?slider-project.html">
-            <img class="img-responsive project-image" src="assets/images/projects/thumb-6.jpg" alt="" />
+            <img class="img-responsive project-image" src="assets/images/projects/thumb-6.jpg" alt="" /> -->
 
-            <div class="hover-title">
-              <h2 class="project-title">HtownAPP</h2>
-              <!--Project Title -->
-              <p>Rate Your Neighborhood</p>
-              <!--Project Subtitle -->
-            </div>
+          <div class="hover-title">
+            <h2 class="project-title">HtownAPP</h2>
+            <!--Project Title -->
+            <p>Rate Your Neighborhood</p>
+            <!--Project Subtitle -->
+          </div>
           </a>
 
           <a class="project-item col-sm-6 col-md-4 col-lg-3 print" href="#?images-project.html">
@@ -642,8 +672,9 @@
       <div class="container text-center scrollimation fade-right">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1">
-            <h1>Latest tweets</h1>
-            <p><i class="fa fa-twitter"></i></p>
+            <h1><b>View my Github</b></h1>
+            <p> <a href="https://github.com/sMedrano101"><i class="fa fa-github"
+                  style="font-size:150px;color:whitesmoke"></i></a></p>
 
             <div id="twitter-slider" class="flexslider" data-widget-id="386017398488186880" data-max-tweets="5"></div>
 
@@ -838,7 +869,7 @@
           <div class="col-sm-6 col-md-5 scrollimation fade-right">
             <p class="lead">
               I am available for freelance. <br />Can't wait for the next
-              exciting project! Could it be yours?
+              exciting project!
             </p>
 
             <p>
